# kokoro-onnx

./: .gitignore  README.md  pyproject.toml
examples/: chinese.py  play_cn.py  with_stream_asyn.py
scripts/: download_models.py
